fix: reduce gap for toggles

--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: var(--spacing-150);
+    gap: var(--spacing-050);
     height: 21px;
     width: 180px;
 }
